--- a/package.json
+++ b/package.json
@@ -1,21 +1,29 @@
 {
-  "name": "test2",
-  "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
-  },
-  "dependencies": {
-    "expo": "~50.0.2",
-    "expo-status-bar": "~1.11.1",
-    "react": "18.2.0",
-    "react-native": "0.73.2"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.20.0"
-  },
-  "private": true
+	"name": "test2",
+	"version": "1.0.0",
+	"main": "node_modules/expo/AppEntry.js",
+	"type": "module",
+	"scripts": {
+		"start": "expo start",
+		"android": "expo start --android",
+		"ios": "expo start --ios",
+		"web": "expo start --web"
+	},
+	"dependencies": {
+		"@stripe/stripe-react-native": "^0.35.1",
+		"expo": "~50.0.2",
+		"expo-status-bar": "~1.11.1",
+		"express": "^4.17.1",
+		"nodemon": "^3.0.3",
+		"react": "18.2.0",
+		"react-native": "0.73.2",
+		"stripe": "^14.13.0"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.23.7",
+		"@babel/node": "^7.22.19"
+	},
+	"homepage": "http://localhost:3000/CheckoutScreen",
+	"proxy": "http://localhost:4242",
+	"private": true
 }
